@@ -5,6 +5,7 @@
  - Use "pure" & "visibility" attributes if they work, regardless of compiler.
  - More deprecated items now have the `[[deprecated]]` attribute.
  - Document the concept of transaction focus.
+ - Error messages more often report query description, if given.
 7.3.0
  - `stream_to` now quotes and escapes its table name.
  - Removed `transaction_base::classname()`.  Did anyone ever use it?
